# applebooks

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  claude.md  datasette_metadata.json  deploy.sh  docker-compose.yml  full_book_extraction.db  map.prd  nginx.conf  pyproject.toml  test_geocode_one.py
.claude/: mcp.json
abx/: __init__.py  cleaner.py  cli.py  db.py  epub_parser.py  llm.py  persistence.py
abxgeo/: __init__.py  cli.py  cluster.py  db_migrate.py  geocoder.py  rate_limiter.py  resolver.py  web_harvester.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: geocode.baml  main.baml
map/: ISSUES.md  README.md  requirements.txt  server.py
map/frontend/: index.html  package-lock.json  package.json
map/frontend/src/: App.svelte  main.js  stores.js
map/frontend/src/lib/: ClusterPopup.svelte  ClusterTimeline.svelte  MapView.svelte  StoryModal.svelte  StoryPopup.svelte
schema/: story.schema.json
tests/: __init__.py  test_resolver.py
